--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,3 +23,18 @@ jobs:
 
       - name: Running Unit Tests
         run: npm run test
+  
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Deploy to S3
+          uses: jakejarvis/s3-sync-action@master
+          with:
+            args: --acl public-read --delete
+          env:
+            AWS_S3_BUCKET: spotify-clone.lyraddigital.com
+            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
+            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
+            AWS_REGION: ap-southeast-2
+            SOURCE_DIR: "public"
