--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,9 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
+    environment:
+      name: Production
+
     steps:
       - uses: actions/checkout@v2
 
@@ -23,7 +26,7 @@ jobs:
 
       - name: Running Unit Tests
         run: npm run test
-        
+
       - name: Deploy to S3
         uses: jakejarvis/s3-sync-action@master
         with:
