--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,18 @@ jobs:
       - name: Running Unit Tests
         run: npm run test
 
+      - name: cdk deploy
+        uses: youyo/aws-cdk-github-actions@v2
+        with:
+          cdk_subcommand: 'deploy'
+          cdk_stack: 'WebsiteStack'
+          cdk_args: '--parameters subDomain=dev-spotify-clone'
+          actions_comment: false
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
+          AWS_DEFAULT_REGION: 'ap-southeast-2'
+
       - name: Deploy to S3
         uses: jakejarvis/s3-sync-action@master
         with:
