--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-cdk/aws-certificatemanager": "^1.121.0",
+    "@aws-cdk/aws-cloudfront": "^1.121.0",
+    "@aws-cdk/aws-route53": "^1.121.0",
+    "@aws-cdk/aws-route53-targets": "^1.121.0",
+    "@aws-cdk/aws-s3-deployment": "^1.121.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
