--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
 
     environment:
@@ -26,11 +26,27 @@ jobs:
 
       - name: Building Code
         run: npm run build
-
+        
+  testing:
+    runs-on: ubuntu-latest
+    needs: build
+    
+    environment:
+      name: Production
+      
+    steps:
       - name: Running Unit Tests
         run: npm run test
 
-      - name: cdk deploy
+  deploy:
+    runs-on: ubuntu-latest
+    needs: testing
+    
+    environment:
+      name: Production
+      
+    steps:
+      - name: Creating / Updating Infrastructure
         uses: youyo/aws-cdk-github-actions@v2
         with:
           cdk_subcommand: 'deploy'
