--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -22,6 +22,11 @@
   },
   "dependencies": {
     "@aws-cdk/aws-s3": "^1.121.0",
+    "@aws-cdk/aws-certificatemanager": "^1.121.0",
+    "@aws-cdk/aws-cloudfront": "^1.121.0",
+    "@aws-cdk/aws-route53": "^1.121.0",
+    "@aws-cdk/aws-route53-targets": "^1.121.0",
+    "@aws-cdk/aws-s3-deployment": "^1.121.0",
     "@aws-cdk/core": "1.121.0",
     "source-map-support": "^0.5.16"
   }
