--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,7 +67,7 @@ jobs:
         with:
           cdk_subcommand: 'deploy'
           cdk_stack: 'WebsiteStack'
-          cdk_args: '--parameters subDomainName=dev-spotify-clone sourceCodeFolder=../application-code --require-approval never'
+          cdk_args: '--parameters subDomainName=dev-spotify-clone sourceCodeFolder=./application-code --require-approval never'
           working_dir: 'infrastructure-code'
           actions_comment: false
         env:
@@ -80,7 +80,7 @@ jobs:
         with:
           args: --acl public-read --delete
         env:
-          AWS_S3_BUCKET: spotify-clone.lyraddigital.com
+          AWS_S3_BUCKET: dev-spotify-clone.lyraddigital.com
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
           AWS_REGION: ap-southeast-2
