--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,7 +67,7 @@ jobs:
         with:
           cdk_subcommand: 'deploy'
           cdk_stack: 'WebsiteStack'
-          cdk_args: '--parameters subDomainName=dev-spotify-clone sourceCodeFolder=./application-code --require-approval never'
+          cdk_args: '--parameters subDomainName=dev-spotify-clone --require-approval never'
           working_dir: 'infrastructure-code'
           actions_comment: false
         env:
