--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -84,7 +84,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
           AWS_REGION: ap-southeast-2
-          SOURCE_DIR: build
+          SOURCE_DIR: application-code
 
       - name: Invalidate index file
         uses: chetan/invalidate-cloudfront-action@master
