--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,8 +66,8 @@ jobs:
         uses: youyo/aws-cdk-github-actions@v2
         with:
           cdk_subcommand: 'deploy'
-          cdk_stack: 'WebsiteStack'
-          cdk_args: '--parameters subDomainName=test-spotify-clone --require-approval never'
+          cdk_stack: 'SpotifyCloneWebsiteStack'
+          cdk_args: '--parameters subDomainName=${{ secrets.SITE_SUBDOMAIN }} --require-approval never'
           working_dir: 'infrastructure-code'
           actions_comment: false
         env:
@@ -80,7 +80,7 @@ jobs:
         with:
           args: --acl public-read --delete
         env:
-          AWS_S3_BUCKET: test-spotify-clone.lyraddigital.com
+          AWS_S3_BUCKET: ${{ secrets.SITE_SUBDOMAIN }}.lyraddigital.com
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
           AWS_REGION: ap-southeast-2
