--- a/.github/workflows/production-deploy.yml
+++ b/.github/workflows/production-deploy.yml
@@ -4,6 +4,10 @@ name: Production Deploy
 
 # Controls when the workflow will run
 on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
   workflow_run:
     workflows: 
       - CI
