--- a/.github/workflows/production-deploy.yml
+++ b/.github/workflows/production-deploy.yml
@@ -7,8 +7,8 @@ on:
   workflow_run:
     workflows: 
       - CI
-    branches:
-      - main
+    # branches:
+    #   - main
     types: 
       - success
 
