--- a/.github/workflows/production-deploy.yml
+++ b/.github/workflows/production-deploy.yml
@@ -7,8 +7,7 @@ on:
   workflow_run:
     workflows: [CI]
     branches: [main]
-    types: 
-      - success
+    types: [completed]
   
   workflow_dispatch:
 
