--- a/.github/workflows/production-deploy.yml
+++ b/.github/workflows/production-deploy.yml
@@ -45,7 +45,7 @@ jobs:
         with:
           cdk_subcommand: 'deploy'
           cdk_stack: ${{ secrets.SITE_STACK_NAME }}
-          cdk_args: '--parameters subDomainName=${{ secrets.SITE_SUB_DOMAIN }} zoneName=${{ secrets.SITE_ROOT_DOMAIN }} --require-approval never'
+          cdk_args: '--parameters subDomainName=${{ secrets.SITE_SUB_DOMAIN }} --parameters zoneName=${{ secrets.SITE_ROOT_DOMAIN }} --require-approval never'
           working_dir: 'infrastructure-code'
           actions_comment: false
         env:
