--- a/.github/workflows/production-deploy.yml
+++ b/.github/workflows/production-deploy.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Download infrastructure code
         uses: dawidd6/action-download-artifact@v2
         with:
-          workflow: ci.yml  
+          workflow: ci.yml
           name: infrastructure-code
           path: infrastructure-code
 
@@ -38,7 +38,7 @@ jobs:
         with:
           cdk_subcommand: 'deploy'
           cdk_stack: ${{ secrets.SITE_STACK_NAME }}
-          cdk_args: '--parameters subDomainName=${{ secrets.SITE_SUB_DOMAIN }} --require-approval never'
+          cdk_args: '--parameters subDomainName=${{ secrets.SITE_SUB_DOMAIN }} --parameters zoneName=${{ secrets.SITE_ROOT_DOMAIN }} --require-approval never'
           working_dir: 'infrastructure-code'
           actions_comment: false
         env:
