--- a/.github/workflows/production-deploy.yml
+++ b/.github/workflows/production-deploy.yml
@@ -38,10 +38,10 @@ jobs:
         with:
           cdk_subcommand: 'deploy'
           cdk_stack: ${{ secrets.SITE_STACK_NAME }}
-          cdk_args: '--parameters subDomainName=${{ secrets.SITE_SUB_DOMAIN }} --parameters zoneName=${{ secrets.SITE_ROOT_DOMAIN }} --require-approval never'
+          cdk_args: '--parameters subDomainName=${{ secrets.SITE_SUB_DOMAIN }} --require-approval never'
           working_dir: 'infrastructure-code'
           actions_comment: false
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
-          AWS_DEFAULT_REGION: 'ap-southeast-2'
+          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
