--- a/.github/workflows/production-deploy.yml
+++ b/.github/workflows/production-deploy.yml
@@ -47,6 +47,7 @@ jobs:
 
   production-deploy:
     runs-on: ubuntu-latest
+    needs: staging-deploy
     
     environment:
       name: Production
