--- a/.github/workflows/production-deploy.yml
+++ b/.github/workflows/production-deploy.yml
@@ -71,10 +71,21 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
           AWS_DEFAULT_REGION: ${{ secrets.CDK_DEFAULT_REGION }}
+          
+  end-to-end-test:
+    runs-on: ubuntu-20.04
+    needs: staging-deploy
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      # Install NPM dependencies, cache them correctly
+      # and run all Cypress tests
+      - name: Cypress run
+        uses: cypress-io/github-action@v2
 
   production-deploy:
     runs-on: ubuntu-latest
-    needs: staging-deploy
+    needs: end-to-end-test
     
     environment:
       name: Production
